<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/dialog_bg">

   <ImageView
       android:id="@+id/close_image"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_marginRight="@dimen/margin_30"
       android:src="@mipmap/close_button" />

   <TextView
       android:id="@+id/dialog_title"
       android:text="@string/dialog_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="@dimen/margin_30"
       android:textColor="@color/white"
       android:textSize="@dimen/text_size_28"
       android:gravity="center"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_centerInParent="true"
       >
      <TextView
          android:id="@+id/off_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:text="@string/off"
          android:textSize="@dimen/list_button_size"
          android:textColor="@color/white"
          android:gravity="center"
          android:background="@mipmap/photo_off"/>
      <TextView
          android:id="@+id/three_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:layout_marginLeft="@dimen/margin_30"
          android:textSize="@dimen/list_button_size"
          android:textColor="@color/white"
          android:gravity="center"
          android:text="@string/three"
          android:background="@mipmap/photo_off"/>
      <TextView
          android:id="@+id/six_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:text="@string/six"
          android:textSize="@dimen/list_button_size"
          android:textColor="@color/white"
          android:gravity="center"
          android:layout_marginLeft="@dimen/margin_30"
          android:background="@mipmap/photo_off"/>
      <TextView
          android:id="@+id/nine_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nine"
          android:textSize="@dimen/list_button_size"
          android:textColor="@color/white"
          android:gravity="center"
          android:layout_marginLeft="@dimen/margin_30"
          android:background="@mipmap/photo_off"/>
      <TextView
          android:id="@+id/tewle_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:text="@string/twele"
          android:textSize="@dimen/list_button_size"
          android:textColor="@color/white"
          android:gravity="center"
          android:layout_marginLeft="@dimen/margin_30"
          android:background="@mipmap/photo_off"/>
   </LinearLayout>








</RelativeLayout>